# homey-energy-dongle

./: .gitignore  Cargo.toml  README.md
.github/workflows/: homey-energy-dongle.yml
src/: discover.rs  lib.rs  reader.rs  websocket.rs
tests/: discover.rs
